Add controller and index

--- a/pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -5,6 +5,23 @@
     <title>Owner Page</title>
 </head>
 <body>
-<h1 th:text="'Owner page'">Owner Page</h1>
+    <h1 th:text="'Owner page'">Owner Page</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="owner : ${owners}">
+                <td th:text="${owner.id}">id</td>
+                <td th:text="${owner.firstName}">first name</td>
+                <td th:text="${owner.lastName}">last name</td>
+            </tr>
+        </tbody>
+
+    </table>
 </body>
 </html>
