Add static resources

--- a/pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -5,7 +5,7 @@
     <title>Owner Page</title>
 </head>
 <body>
-    <h1 th:text="'Owner page'">Owner Page</h1>
+    <h1 th:text="'List of Owners'">Owner Page</h1>
     <table>
         <thead>
             <tr>
