--- a/pet-clinic-web/src/main/resources/templates/vet/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vet/index.html
@@ -6,5 +6,23 @@
 </head>
 <body>
     <h1 th:text="'List of Vets'">list of vets</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="vet : ${vets}">
+            <td th:text="${vet.id}">id</td>
+            <td th:text="${vet.firstName}">first name</td>
+            <td th:text="${vet.lastName}">last name</td>
+        </tr>
+        </tbody>
+
+    </table>
 </body>
 </html>
