--- a/pet-clinic-web/src/main/resources/templates/owner/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owner/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
+
 <head>
     <meta charset="UTF-8">
     <title>Owner Page</title>
 </head>
 <body>
-    <h1 th:text="'List of Owners'">Owner Page</h1>
-    <table>
+    <h2 th:text="'List of Owners'">Owner Page</h2>
+    <table class="table table-striped">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
+                <th style="width: 150px;">ID</th>
+                <th style="width: 150px;">First Name</th>
+                <th style="width: 150px;">Last Name</th>
             </tr>
         </thead>
         <tbody>
             <tr th:each="owner : ${owners}">
-                <td th:text="${owner.id}">id</td>
+                <td th:text="${owner.id}" >id</td>
                 <td th:text="${owner.firstName}">first name</td>
                 <td th:text="${owner.lastName}">last name</td>
             </tr>
